--- a/io-filej/src/main/AndroidManifest.xml
+++ b/io-filej/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="nota.android.toolkit.filej" />
+<manifest package="nota.android.toolkit.filej" />
