--- a/io-encodedetector/src/main/AndroidManifest.xml
+++ b/io-encodedetector/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="nota.toolkit.io.encodehelper" />
+	package="nota.toolkit.io.encodedetector" />
