--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'Nota-Toolkit'
 
-include ':io-encodehelper',
+include ':io-encodedetector',
+        ':io-encodehelper',
         ':io-filej'
 
 rootProject.children.each {
