--- a/io-filej/nt-io-filej.gradle
+++ b/io-filej/nt-io-filej.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 
 group "tiiehenry.nota.toolkit"
-version "1.2"
+version "1.3"
 
 android {
     compileSdkVersion 29
@@ -20,3 +20,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
+
+
+apply from: "../properties/maven-publish.gradle"
