--- a/io-encodedetector/nt-io-encodedetector.gradle
+++ b/io-encodedetector/nt-io-encodedetector.gradle
@@ -20,3 +20,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
+
+apply from: "../properties/maven-publish.gradle"
