--- a/io-encodehelper/nt-io-encodehelper.gradle
+++ b/io-encodehelper/nt-io-encodehelper.gradle
@@ -20,3 +20,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
+
+apply from: "../properties/maven-publish.gradle"
