--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,16 @@
 
 buildscript {
 
-    ext.kotlin_version = "1.3.72"
-    ext.build_gradle_version = '3.6.3'
+    ext.kotlin_version = "1.7.10"
+    ext.build_gradle_version = '8.1.0'
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/public/' } //jcenter和central
+        maven { url 'https://maven.aliyun.com/repository/google/' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
+        maven { url 'https://maven.fabric.io/public' }
         google()
-        jcenter()
-
+        mavenLocal()
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$build_gradle_version"
@@ -17,13 +21,19 @@ buildscript {
     }
 }
 
-allprojects {
-    repositories {
-        google()
-        jcenter()
-
-    }
-}
+//allprojects {
+//    repositories {
+//        maven { url 'https://maven.aliyun.com/repository/public/' } //jcenter和central
+//        maven { url 'https://maven.aliyun.com/repository/google/' }
+//        maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
+//        maven { url 'https://dl.bintray.com/ppartisan/maven/' }
+//        maven { url "https://clojars.org/repo/" }
+//        maven { url "https://jitpack.io" }
+//        mavenLocal()
+//        mavenCentral()
+//        google()
+//    }
+//}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
