--- a/io-encodedetector/nt-io-encodedetector.gradle
+++ b/io-encodedetector/nt-io-encodedetector.gradle
@@ -6,15 +6,16 @@ group "tiiehenry.nota.toolkit"
 version "67.1"
 
 android {
-    compileSdkVersion 29
+    namespace = "nota.io.encodedetector"
+
+    compileSdk 34
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
-
 }
 
 dependencies {
