--- a/io-encodehelper/nt-io-encodehelper.gradle
+++ b/io-encodehelper/nt-io-encodehelper.gradle
@@ -6,11 +6,13 @@ group "tiiehenry.nota.toolkit"
 version "1.1"
 
 android {
-    compileSdkVersion 29
+    namespace = "nota.io.encodehelper"
+
+    compileSdk 34
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
