--- a/io-filej/nt-io-filej.gradle
+++ b/io-filej/nt-io-filej.gradle
@@ -2,14 +2,16 @@ apply plugin: 'com.android.library'
 
 
 group "tiiehenry.nota.toolkit"
-version "1.3"
+version "1.4"
 
 android {
-    compileSdkVersion 29
+    namespace = "nota.io.filej"
+
+    compileSdk 34
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
